components/Login/login.scss
@import "../../app/globals.scss";

.login-page {
  // display: grid;
  // position: relative;
  // height: 100vh;
  // grid-template-columns: 100% 1fr;
  // grid-gap: 20px;
  // gap: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  padding: 40px 40px 0 40px;
  align-items: center;
  @media (max-width: "767px") {
    padding: 20px;
    display: block;
  }
  .login-box {
    width: 40%;
    text-align: start;
    backdrop-filter: blur(20px);
    background: rgba(71, 64, 112, 0.4);
    padding: 20px;
    border-radius: 20px;
    @media (max-width: "767px") {
      width: 100%;
      padding: 10px;
      margin-bottom: 20px;
    }
    .pageLogo-section {
      text-align: start;
      margin: 0;

      padding: 20px 0;
    }
  }
  .login-info {
    position: absolute;
    bottom: 0;
    right: 20px;
    img {
      width: 100%;
      height: 900px;
      display: block;
      object-fit: cover;
      @media (max-width: 1024px) {
        height: 600px;
      }
      @media (max-width: 767px) {
        height: 400px;
      }
      @media (max-width: 480px) {
        height: 300px;
      }
    }
    @media (max-width: 767px) {
      position: unset;
    }
  }
  h1 {
    font-weight: 600;
    font-size: clamp(32px, 4vw, 40px);
    line-height: 1.2;
    margin: 0 0 20px 0;
    color: #fff;
  }
  .run-button-alignment {
    margin: 20px 0 0 0;
    display: flex;
    align-items: center;
    justify-content: start;

    button {
      background: linear-gradient(
        21deg,
        #427dff 8.39%,
        #7023ff 20.31%,
        #174dba 50.95%,
        #8a6eff 69.67%,
        #52b4ff 88.4%,
        #8a6eff 93.51%
      );
      border-radius: 50px;
      padding: 16px 56px;
      border: none;

      font-weight: 600;
      font-size: 16px;
      line-height: 100%;
      letter-spacing: -2%;
      text-align: center;
      color: #fff;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 10px;
    }
  }
  .field {
    display: grid;
    grid-template-columns: 60px 1fr 60px;
    align-items: center;
    height: 56px;
    border-radius: 50px;
    padding: 0 0px;
    background: #fff;
    color: #000;

    margin-bottom: 20px;

    &:focus-within {
      outline-color: var(--focus);
      box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08),
        0 16px 40px rgba(0, 80, 180, 0.25);
    }
  }

  .iconLeft,
  .iconRight {
    display: grid;
    place-items: center;
    color: var(--muted);
  }

  .input {
    width: 100%;
    border: 0;
    outline: 0;
    background: transparent;
    font-size: clamp(18px, 2.4vw, 22px);
    line-height: 1;
    color: black;

    &::placeholder {
      color: #6c7b8a;
      opacity: 1;
    }
  }

  .eyeBtn {
    all: unset;
    cursor: pointer;
    display: grid;
    place-items: center;
    width: 44px;
    height: 44px;
    margin: 0 auto;
    border-radius: 999px;

    &:hover {
      background: rgba(0, 0, 0, 0.06);
    }
  }

  .check {
    display: flex;
    align-items: center;
    gap: 12px;
    margin-top: 6px;
    user-select: none;

    input {
      appearance: none;
      width: 22px;
      height: 22px;
      border-radius: 6px;
      border: 2px solid #8085ff;
      display: grid;
      place-items: center;
      cursor: pointer;
      background: transparent;
    }
    input:checked {
      background: var(--primary);
      border-color: #8085ff;
    }
    input:checked::after {
      content: "";
      width: 4px;
      height: 9px;
      border: 2px solid #8085ff;
      border-top: 0;
      border-left: 0;
      transform: rotate(45deg);
      margin-top: -2px;
    }
    label {
      color: #d6e0ea;
      font-size: 18px;
      font-weight: 400;
      cursor: pointer;
    }
  }
}

